# flake8-nb

./: .all-contributorsrc  .bettercodehub.yml  .coveragerc  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sourcery.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  changelog.md  constraints-py36.txt  constraints.txt  pyproject.toml  readthedocs.yml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml  hook_tester.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: test.yml
.github/workflows/: autoupdate-pre-commit-config.yml  binder-on-pr.yml  codeql.yml  test-nightly-schedule.yml  test-pre-coomit-hook.yml  test.yml  trigger-binder.yml  update-precommit-config.yml
binder/: environment.yml  postBuild  trigger_binder.sh
docs/: Makefile  api_docs.rst  changelog.md  conf.py  examples.rst  index.rst  installation.rst  make.bat  refresh_symlinks_windows.sh  requirements.txt  usage.rst
docs/_static/css/: copy-btn-overwrite.css
docs/_templates/autosummary/: exception.rst  function.rst  module.rst
docs/notebooks/: with_out_tags.nblink  with_tags.nblink
flake8_nb/: __init__.py  __main__.py  custom_config.ini  flake8_integration.py  flake8_nb.py  prepare_file.py
flake8_nb/flake8_integration/: __init__.py  cli.py  formatter.py
flake8_nb/parsers/: __init__.py  cell_parsers.py  notebook_parsers.py
testing/: 1_Using-Jupyter-Lab.ipynb  fake_test_notebook.ipynb  modified_template.tpl  playgound.ipynb  test_notebook.ipynb#In[1]
tests/: __init__.py  conftest.py  test__main__.py  test_flake8_integration.py  test_flake8_nb.py  test_prepare_file.py
tests/data/: expected_output_code_cell_count.txt  expected_output_config_test.txt  expected_output_exec_count.txt  expected_output_total_cell_count.txt
tests/flake8_integration/: conftest.py  test_cli.py  test_flake8_integration.py  test_formatter.py
tests/intermediate_py_files/: notebook_with_flake8_tags.py  notebook_with_ipython_magic.py
tests/parsers/: test_cell_parsers.py  test_notebook_parsers.py
tests/test_notebooks/: not_a_notebook.ipynb  notebook_with_flake8_tags.ipynb  notebook_with_ipython_magic.ipynb  notebook_with_out_flake8_tags.ipynb
(+14 files in other folders)
