[metadata]
name = flake8_nb
version = attr: flake8_nb.__version__
description = Flake8 based checking for jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/flake8-nb
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache-2.0
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flake8
    Framework :: Jupyter
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
keywords = flake8_nb flake8 lint notebook jupyter ipython
project_urls =
    Documentation=https://flake8-nb.readthedocs.io/en/latest/
    Source=https://github.com/s-weigand/flake8-nb
    Tracker=https://github.com/s-weigand/flake8-nb/issues
    Changelog=https://flake8-nb.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    flake8>=3.7.0,<4.0.2
    ipython>=7.8.0
    nbconvert>=5.6.0
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools>=41.2
tests_require = pytest>=3
zip_safe = False

[options.packages.find]
include =
    flake8_nb
    flake8_nb.*

[options.entry_points]
console_scripts =
    flake8_nb = flake8_nb.__main__:main
    flake8-nb = flake8_nb.__main__:main
flake8.report =
    default_notebook = flake8_nb:IpynbFormatter

[flake8]
max-line-length = 99
exclude =
    docs
    *.ipynb_checkpoints/*
    *.tox*
    tests/data/notebooks/*

[darglint]
docstring_style = numpy

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[rstcheck]
ignore_directives = autosummary,code-block

[mypy]
strict = True
ignore_missing_imports = True
scripts_are_modules = True
show_error_codes = True
